--- a/package.json
+++ b/package.json
@@ -1,9 +1,15 @@
 {
   "name": "set-phone-with-modal",
-  "version": "1.0.0",
+  "version": "1.0.7",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "exports": {
+    ".": {
+      "require": "./index.js",
+      "import": "./index.js"
+    }
   },
   "keywords": [
     "modal",
@@ -15,5 +21,6 @@
   "description": "Provides method setPhone which renders modal window with input and button to save inputted phone to localstorage",
   "publishConfig": {
     "access": "public"
-  }
+  },
+  "type": "module"
 }
